<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>home_cleaning_robot</name>
  <version>0.0.1</version>
  <description>Home Cleaner Bot Robot URDF Package</description>
  <maintainer email="mehmetsefatoksoy@istun.edu.tr">Mehmet Sefa Toksoy</maintainer>
  <maintainer email="elifceydacivelek@istun.edu.tr">Elif Ceyda Civelek</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- Nav2 dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>dwb_controller</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>dwb_critics</exec_depend>
  <exec_depend>dwb_plugins</exec_depend>
  
  <!-- SLAM Toolbox -->
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
